--- a/UfrmLogin.fmx
+++ b/UfrmLogin.fmx
@@ -1,64 +1,69 @@
 object frmLogin: TfrmLogin
   Left = 0
   Top = 0
+  BorderStyle = bsSingle
   Caption = 'Form1'
-  ClientHeight = 567
-  ClientWidth = 384
+  ClientHeight = 402
+  ClientWidth = 320
+  Visible = True
   FormFactor.Width = 320
   FormFactor.Height = 480
-  FormFactor.Devices = [Desktop]
+  FormFactor.Devices = [dkDesktop, dkiPhone, dkiPad]
+  OnShow = FormShow
   DesignerMobile = True
-  DesignerWidth = 384
-  DesignerHeight = 592
-  DesignerDeviceName = 'Google Nexus 4'
+  DesignerWidth = 320
+  DesignerHeight = 427
+  DesignerDeviceName = '2.7 QVGA Android Phone'
   DesignerOrientation = 0
   DesignerOSVersion = ''
   object edtLogin: TEdit
-    Touch.InteractiveGestures = [LongTap, DoubleTap]
+    Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+    Align = alFitLeft
     TabOrder = 0
-    Position.X = 64.000000000000000000
-    Position.Y = 216.000000000000000000
-    Width = 257.000000000000000000
+    Text = 'AAAAAAAAAAAAAAA'
+    Position.Y = 185.000000000000000000
+    Width = 320.000000000000000000
     Height = 32.000000000000000000
+    KillFocusByReturn = False
   end
   object edtSenha: TEdit
-    Touch.InteractiveGestures = [LongTap, DoubleTap]
+    Touch.InteractiveGestures = [igLongTap, igDoubleTap]
     TabOrder = 1
-    Position.X = 64.000000000000000000
-    Position.Y = 272.000000000000000000
+    Position.X = 32.000000000000000000
+    Position.Y = 264.000000000000000000
     Width = 257.000000000000000000
     Height = 32.000000000000000000
+    KillFocusByReturn = False
   end
   object btnLogin: TButton
     Height = 44.000000000000000000
-    Position.X = 249.000000000000000000
-    Position.Y = 312.000000000000000000
+    Position.X = 217.000000000000000000
+    Position.Y = 304.000000000000000000
     TabOrder = 2
     Text = 'Login'
     Width = 73.000000000000000000
   end
-  object btnRegister: TButton
-    Height = 44.000000000000000000
-    Position.X = 136.000000000000000000
-    Position.Y = 312.000000000000000000
-    TabOrder = 3
-    Text = 'Register'
-    Width = 106.000000000000000000
-  end
   object lblEsqueciMinhaSenha: TLabel
-    StyledSettings = [Family, Size, Style]
+    FontColor = claCadetblue
+    StyledSettings = [ssFamily, ssSize, ssStyle]
     Height = 23.000000000000000000
-    Position.X = 136.000000000000000000
-    Position.Y = 360.000000000000000000
-    TextSettings.FontColor = claCornflowerblue
+    Position.X = 104.000000000000000000
+    Position.Y = 352.000000000000000000
     Text = 'Esqueci a minha senha'
     Width = 217.000000000000000000
   end
   object lblMyDeed: TLabel
+    Align = alMostTop
     Height = 23.000000000000000000
-    Position.X = 112.000000000000000000
-    Position.Y = 112.000000000000000000
     Text = 'MyDeed'
-    Width = 105.000000000000000000
+    Width = 320.000000000000000000
+  end
+  object btnRegister: TButton
+    Height = 44.000000000000000000
+    Position.X = 104.000000000000000000
+    Position.Y = 304.000000000000000000
+    TabOrder = 3
+    Text = 'Register'
+    Width = 106.000000000000000000
   end
 end
