--- a/uFrmFormulario.fmx
+++ b/uFrmFormulario.fmx
@@ -1,153 +1,173 @@
 object frmFormulario: TfrmFormulario
   Left = 0
   Top = 0
-  ClientHeight = 402
+  ClientHeight = 548
   ClientWidth = 320
+  StyleLookup = 'calloutpanelstyle'
+  Visible = True
   FormFactor.Width = 320
   FormFactor.Height = 480
-  FormFactor.Devices = [Desktop]
+  FormFactor.Devices = [dkDesktop, dkiPhone, dkiPad]
   DesignerMobile = True
   DesignerWidth = 320
-  DesignerHeight = 427
-  DesignerDeviceName = '2.7 QVGA Android Phone'
+  DesignerHeight = 568
+  DesignerDeviceName = 'iPhone5'
   DesignerOrientation = 0
   DesignerOSVersion = ''
   object Header: TToolBar
-    Height = 48.000000000000000000
+    Height = 44.000000000000000000
     TabOrder = 0
     Width = 320.000000000000000000
     object HeaderLabel: TLabel
-      Align = Left
       Height = 48.000000000000000000
       StyleLookup = 'toollabel'
       Text = 'Formul'#225'rio'
       Width = 177.000000000000000000
     end
     object btnSalvar: TButton
-      Align = Right
-      Height = 48.000000000000000000
-      Position.X = 247.000000000000000000
+      Align = alRight
+      Height = 44.000000000000000000
+      Position.X = 240.000000000000000000
       TabOrder = 1
       Text = 'Salvar'
-      Width = 73.000000000000000000
+      Width = 80.000000000000000000
     end
-    object btnCancelar: TButton
-      Align = Right
-      Height = 48.000000000000000000
-      Position.X = 160.000000000000000000
+    object btnVoltar: TButton
+      Align = alRight
+      Height = 44.000000000000000000
+      Position.X = 153.000000000000000000
       TabOrder = 0
-      Text = 'Cancelar'
+      Text = 'Voltar'
       Width = 87.000000000000000000
+      OnClick = btnVoltarClick
     end
   end
   object scrollPrincipal: TVertScrollBox
-    Align = Client
-    Height = 354.000000000000000000
+    Align = alClient
+    Height = 504.000000000000000000
     TabOrder = 1
     Width = 320.000000000000000000
     object pnlDataHoraChegada: TPanel
-      Align = Top
+      Align = alTop
       Height = 57.000000000000000000
-      Width = 315.000000000000000000
+      Width = 313.000000000000000000
       TabOrder = 1
-      object dtChegada: TDateEdit
-        Date = 42234.000000000000000000
-        Cursor = crMultiDrag
-        Height = 32.000000000000000000
-        Position.Y = 22.000000000000000000
-        TabOrder = 0
-        Width = 137.000000000000000000
-      end
       object Label1: TLabel
-        Align = Top
+        Align = alTop
         Height = 23.000000000000000000
         Text = 'Chegada:'
-        Width = 315.000000000000000000
+        Width = 313.000000000000000000
       end
       object HorasChegada: TTimeEdit
         Time = 0.638888888888888800
-        Height = 32.000000000000000000
-        Position.X = 160.000000000000000000
-        Position.Y = 22.000000000000000000
-        TabOrder = 2
+        Align = alLeft
+        Height = 31.000000000000000000
+        Position.X = 121.000000000000000000
+        Position.Y = 25.000000000000000000
+        TabOrder = 1
         Width = 105.000000000000000000
+      end
+      object dtChegada: TCalendarEdit
+        Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+        Align = alLeft
+        TabOrder = 2
+        Cursor = crIBeam
+        Date = 42234.000000000000000000
+        Height = 31.000000000000000000
+        Position.Y = 25.000000000000000000
+        Width = 121.000000000000000000
       end
     end
     object pnlDataHoraSaida: TPanel
-      Align = Top
+      Align = alTop
       Height = 57.000000000000000000
       Position.Y = 57.000000000000000000
-      Width = 315.000000000000000000
+      Width = 313.000000000000000000
       TabOrder = 0
-      object dtSaida: TDateEdit
-        Date = 42234.000000000000000000
-        Cursor = crMultiDrag
-        Height = 32.000000000000000000
-        Position.Y = 22.000000000000000000
-        TabOrder = 0
-        Width = 137.000000000000000000
-      end
       object Label2: TLabel
-        Align = Top
+        Align = alTop
         Height = 23.000000000000000000
         Text = 'Sa'#237'da:'
-        Width = 315.000000000000000000
+        Width = 313.000000000000000000
       end
       object HorasSaida: TTimeEdit
         Time = 0.638888888888888800
-        Height = 32.000000000000000000
-        Position.X = 160.000000000000000000
-        Position.Y = 22.000000000000000000
-        TabOrder = 2
+        Align = alLeft
+        Height = 31.000000000000000000
+        Position.X = 121.000000000000000000
+        Position.Y = 25.000000000000000000
+        TabOrder = 1
         Width = 105.000000000000000000
+      end
+      object dtSaida: TCalendarEdit
+        Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+        Align = alLeft
+        TabOrder = 2
+        Cursor = crIBeam
+        Date = 42234.000000000000000000
+        Height = 31.000000000000000000
+        Position.Y = 25.000000000000000000
+        Width = 121.000000000000000000
       end
     end
     object pnlServicosRealizados: TPanel
-      Align = Top
+      Align = alTop
       Height = 223.000000000000000000
-      Position.Y = 114.000000000000000000
+      Position.Y = 168.000000000000000000
       StyleLookup = 'calloutpanelstyle'
-      Width = 315.000000000000000000
+      Width = 313.000000000000000000
       TabOrder = 2
-      object grdServicosRealizados: TGrid
-        Align = Bottom
-        Height = 153.000000000000000000
-        Position.Y = 70.000000000000000000
-        TabOrder = 1
-        Width = 315.000000000000000000
-        RowCount = 100
-        RowHeight = 21.000000000000000000
-        object grdServicoscollServico: TColumn
-          Height = 147.000000000000000000
-          Position.Y = 147.000000000000000000
-          TabOrder = 0
-          Width = 289.000000000000000000
-        end
-      end
       object btnAddServico: TButton
-        Align = Bottom
+        Align = alTop
         Height = 44.000000000000000000
-        Position.Y = 26.000000000000000000
         TabOrder = 0
         Text = 'Adicionar Servi'#231'o'
-        Width = 315.000000000000000000
+        Width = 313.000000000000000000
         OnClick = btnAddServicoClick
+      end
+      object listBoxServicosRealizados: TListBox
+        Align = alClient
+        Height = 179.000000000000000000
+        TabOrder = 1
+        Width = 313.000000000000000000
+        DefaultItemStyles.ItemStyle = 'listboxitemnodetail'
+        DefaultItemStyles.GroupHeaderStyle = ''
+        DefaultItemStyles.GroupFooterStyle = ''
+        OnItemClick = listBoxServicosRealizadosItemClick
       end
     end
     object Label3: TLabel
-      Align = Top
+      Align = alTop
       Height = 23.000000000000000000
-      Position.Y = 337.000000000000000000
+      Position.Y = 391.000000000000000000
       Text = 'Observa'#231#245'es:'
-      Width = 315.000000000000000000
+      Width = 313.000000000000000000
     end
     object memoObs: TMemo
-      Touch.InteractiveGestures = [Pan, LongTap, DoubleTap]
-      Align = Client
-      Height = 0.000000000000000000
+      Touch.InteractiveGestures = [igPan, igLongTap, igDoubleTap]
+      Align = alTop
+      Height = 137.000000000000000000
+      Position.Y = 414.000000000000000000
       TabOrder = 4
-      Width = 315.000000000000000000
+      Width = 313.000000000000000000
       MaxLength = 400
+    end
+    object Label4: TLabel
+      Align = alTop
+      Height = 23.000000000000000000
+      Position.Y = 114.000000000000000000
+      Text = 'Descri'#231#227'o r'#225'pida :'
+      Width = 313.000000000000000000
+      Trimming = ttCharacter
+    end
+    object edtDescricaoRapida: TEdit
+      Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+      Align = alTop
+      TabOrder = 6
+      Position.Y = 137.000000000000000000
+      Width = 313.000000000000000000
+      Height = 31.000000000000000000
+      KillFocusByReturn = False
     end
   end
 end
