--- a/UfrmLogin.fmx
+++ b/UfrmLogin.fmx
@@ -3,36 +3,35 @@ object frmLogin: TfrmLogin
   Top = 0
   BorderStyle = bsSingle
   Caption = 'Form1'
-  ClientHeight = 402
-  ClientWidth = 320
+  ClientHeight = 567
+  ClientWidth = 384
   Visible = True
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [dkDesktop, dkiPhone, dkiPad]
-  OnShow = FormShow
   DesignerMobile = True
-  DesignerWidth = 320
-  DesignerHeight = 427
-  DesignerDeviceName = '2.7 QVGA Android Phone'
+  DesignerWidth = 384
+  DesignerHeight = 592
+  DesignerDeviceName = 'Google Nexus 4'
   DesignerOrientation = 0
   DesignerOSVersion = ''
   object edtLogin: TEdit
     Touch.InteractiveGestures = [igLongTap, igDoubleTap]
-    Align = alFitLeft
     TabOrder = 0
-    Text = 'AAAAAAAAAAAAAAA'
-    Position.Y = 185.000000000000000000
-    Width = 320.000000000000000000
+    Position.Y = 212.000000000000000000
+    Width = 384.000000000000000000
     Height = 32.000000000000000000
+    HelpType = htKeyword
+    TextPrompt = 'Usu'#225'rio'
     KillFocusByReturn = False
   end
   object edtSenha: TEdit
     Touch.InteractiveGestures = [igLongTap, igDoubleTap]
     TabOrder = 1
-    Position.X = 32.000000000000000000
-    Position.Y = 264.000000000000000000
-    Width = 257.000000000000000000
+    Position.Y = 169.000000000000000000
+    Width = 385.000000000000000000
     Height = 32.000000000000000000
+    TextPrompt = 'Senha'
     KillFocusByReturn = False
   end
   object btnLogin: TButton
@@ -47,16 +46,10 @@ object frmLogin: TfrmLogin
     FontColor = claCadetblue
     StyledSettings = [ssFamily, ssSize, ssStyle]
     Height = 23.000000000000000000
-    Position.X = 104.000000000000000000
+    Position.X = 96.000000000000000000
     Position.Y = 352.000000000000000000
     Text = 'Esqueci a minha senha'
     Width = 217.000000000000000000
-  end
-  object lblMyDeed: TLabel
-    Align = alMostTop
-    Height = 23.000000000000000000
-    Text = 'MyDeed'
-    Width = 320.000000000000000000
   end
   object btnRegister: TButton
     Height = 44.000000000000000000
@@ -65,5 +58,15 @@ object frmLogin: TfrmLogin
     TabOrder = 3
     Text = 'Register'
     Width = 106.000000000000000000
+  end
+  object Label1: TLabel
+    FontColor = claMidnightblue
+    StyledSettings = [ssFamily, ssSize, ssStyle]
+    Height = 23.000000000000000000
+    Position.X = 104.000000000000000000
+    Position.Y = 112.000000000000000000
+    Text = 'MyDeed'
+    Width = 82.000000000000000000
+    Trimming = ttCharacter
   end
 end
