--- a/uFrmFormulario.fmx
+++ b/uFrmFormulario.fmx
@@ -1,21 +1,22 @@
 object frmFormulario: TfrmFormulario
   Left = 0
   Top = 0
-  ClientHeight = 548
+  ClientHeight = 508
   ClientWidth = 320
   StyleLookup = 'calloutpanelstyle'
   Visible = True
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [dkDesktop, dkiPhone, dkiPad]
+  OnClose = FormClose
   DesignerMobile = True
   DesignerWidth = 320
-  DesignerHeight = 568
-  DesignerDeviceName = 'iPhone5'
+  DesignerHeight = 533
+  DesignerDeviceName = 'Samsung Galaxy S2'
   DesignerOrientation = 0
   DesignerOSVersion = ''
   object Header: TToolBar
-    Height = 44.000000000000000000
+    Height = 48.000000000000000000
     TabOrder = 0
     Width = 320.000000000000000000
     object HeaderLabel: TLabel
@@ -26,148 +27,149 @@ object frmFormulario: TfrmFormulario
     end
     object btnSalvar: TButton
       Align = alRight
-      Height = 44.000000000000000000
+      Height = 48.000000000000000000
       Position.X = 240.000000000000000000
+      StyleLookup = 'donetoolbutton'
       TabOrder = 1
       Text = 'Salvar'
       Width = 80.000000000000000000
     end
     object btnVoltar: TButton
       Align = alRight
-      Height = 44.000000000000000000
-      Position.X = 153.000000000000000000
+      Height = 48.000000000000000000
+      Position.X = 192.000000000000000000
+      StyleLookup = 'priortoolbutton'
       TabOrder = 0
       Text = 'Voltar'
-      Width = 87.000000000000000000
+      Width = 48.000000000000000000
       OnClick = btnVoltarClick
     end
   end
-  object scrollPrincipal: TVertScrollBox
+  object ReTanguloFundo: TRectangle
     Align = alClient
-    Height = 504.000000000000000000
-    TabOrder = 1
+    Fill.Color = claLightskyblue
+    Height = 460.000000000000000000
     Width = 320.000000000000000000
-    object pnlDataHoraChegada: TPanel
-      Align = alTop
-      Height = 57.000000000000000000
-      Width = 313.000000000000000000
-      TabOrder = 1
-      object Label1: TLabel
-        Align = alTop
-        Height = 23.000000000000000000
-        Text = 'Chegada:'
-        Width = 313.000000000000000000
-      end
-      object HorasChegada: TTimeEdit
-        Time = 0.638888888888888800
-        Align = alLeft
-        Height = 31.000000000000000000
-        Position.X = 121.000000000000000000
-        Position.Y = 25.000000000000000000
-        TabOrder = 1
-        Width = 105.000000000000000000
-      end
-      object dtChegada: TCalendarEdit
-        Touch.InteractiveGestures = [igLongTap, igDoubleTap]
-        Align = alLeft
-        TabOrder = 2
-        Cursor = crIBeam
-        Date = 42234.000000000000000000
-        Height = 31.000000000000000000
-        Position.Y = 25.000000000000000000
-        Width = 121.000000000000000000
-      end
-    end
-    object pnlDataHoraSaida: TPanel
-      Align = alTop
-      Height = 57.000000000000000000
-      Position.Y = 57.000000000000000000
-      Width = 313.000000000000000000
+    object scrollPrincipal: TVertScrollBox
+      Align = alClient
+      Height = 452.000000000000000000
+      Margins.Left = 4.000000000000000000
+      Margins.Top = 4.000000000000000000
+      Margins.Right = 3.000000000000000000
+      Margins.Bottom = 4.000000000000000000
       TabOrder = 0
-      object Label2: TLabel
+      Width = 313.000000000000000000
+      object pnlDataHoraChegada: TPanel
         Align = alTop
+        Height = 57.000000000000000000
+        Width = 313.000000000000000000
+        TabOrder = 1
+        object Label1: TLabel
+          Align = alTop
+          Height = 23.000000000000000000
+          Text = 'Chegada:'
+          Width = 313.000000000000000000
+        end
+        object HorasChegada: TTimeEdit
+          Time = 0.638888888888888800
+          Align = alLeft
+          Height = 32.000000000000000000
+          Position.X = 121.000000000000000000
+          Position.Y = 24.000000000000000000
+          TabOrder = 1
+          Width = 105.000000000000000000
+        end
+        object dtChegada: TCalendarEdit
+          Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+          Align = alLeft
+          TabOrder = 2
+          Cursor = crIBeam
+          Date = 42234.000000000000000000
+          Height = 32.000000000000000000
+          Position.Y = 24.000000000000000000
+          Width = 121.000000000000000000
+        end
+      end
+      object pnlDataHoraSaida: TPanel
+        Align = alTop
+        Height = 57.000000000000000000
+        Position.Y = 57.000000000000000000
+        Width = 313.000000000000000000
+        TabOrder = 0
+        object Label2: TLabel
+          Align = alTop
+          Height = 23.000000000000000000
+          Text = 'Sa'#237'da:'
+          Width = 313.000000000000000000
+        end
+        object HorasSaida: TTimeEdit
+          Time = 0.638888888888888800
+          Align = alLeft
+          Height = 32.000000000000000000
+          Position.X = 121.000000000000000000
+          Position.Y = 24.000000000000000000
+          TabOrder = 1
+          Width = 105.000000000000000000
+        end
+        object dtSaida: TCalendarEdit
+          Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+          Align = alLeft
+          TabOrder = 2
+          Cursor = crIBeam
+          Date = 42234.000000000000000000
+          Height = 32.000000000000000000
+          Position.Y = 24.000000000000000000
+          Width = 121.000000000000000000
+        end
+      end
+      object Label3: TLabel
+        Align = alTop
+        StyledSettings = [ssFamily, ssSize, ssStyle]
         Height = 23.000000000000000000
-        Text = 'Sa'#237'da:'
+        Margins.Top = 3.000000000000000000
+        Margins.Bottom = 3.000000000000000000
+        Position.Y = 200.000000000000000000
+        Text = 'Observa'#231#245'es:'
         Width = 313.000000000000000000
       end
-      object HorasSaida: TTimeEdit
-        Time = 0.638888888888888800
-        Align = alLeft
-        Height = 31.000000000000000000
-        Position.X = 121.000000000000000000
-        Position.Y = 25.000000000000000000
-        TabOrder = 1
-        Width = 105.000000000000000000
+      object memoObs: TMemo
+        Touch.InteractiveGestures = [igPan, igLongTap, igDoubleTap]
+        Align = alTop
+        Locked = True
+        Height = 137.000000000000000000
+        Position.Y = 226.000000000000000000
+        TabOrder = 3
+        Width = 313.000000000000000000
+        MaxLength = 400
       end
-      object dtSaida: TCalendarEdit
-        Touch.InteractiveGestures = [igLongTap, igDoubleTap]
-        Align = alLeft
-        TabOrder = 2
-        Cursor = crIBeam
-        Date = 42234.000000000000000000
+      object pnlDescricaoRapida: TPanel
+        Align = alTop
         Height = 31.000000000000000000
-        Position.Y = 25.000000000000000000
-        Width = 121.000000000000000000
+        Margins.Top = 4.000000000000000000
+        Margins.Bottom = 4.000000000000000000
+        Position.Y = 118.000000000000000000
+        Width = 313.000000000000000000
+        TabOrder = 4
+        object edtDescricaoRapida: TEdit
+          Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+          Align = alClient
+          TabOrder = 0
+          Width = 313.000000000000000000
+          Height = 32.000000000000000000
+          TextPrompt = 'Descri'#231#227'o r'#225'pida'
+          KillFocusByReturn = False
+        end
       end
-    end
-    object pnlServicosRealizados: TPanel
-      Align = alTop
-      Height = 223.000000000000000000
-      Position.Y = 168.000000000000000000
-      StyleLookup = 'calloutpanelstyle'
-      Width = 313.000000000000000000
-      TabOrder = 2
       object btnAddServico: TButton
         Align = alTop
         Height = 44.000000000000000000
-        TabOrder = 0
-        Text = 'Adicionar Servi'#231'o'
+        Position.Y = 153.000000000000000000
+        TabOrder = 5
+        Text = 'Servi'#231'os Realizados'
+        Trimming = ttCharacter
         Width = 313.000000000000000000
         OnClick = btnAddServicoClick
       end
-      object listBoxServicosRealizados: TListBox
-        Align = alClient
-        Height = 179.000000000000000000
-        TabOrder = 1
-        Width = 313.000000000000000000
-        DefaultItemStyles.ItemStyle = 'listboxitemnodetail'
-        DefaultItemStyles.GroupHeaderStyle = ''
-        DefaultItemStyles.GroupFooterStyle = ''
-        OnItemClick = listBoxServicosRealizadosItemClick
-      end
-    end
-    object Label3: TLabel
-      Align = alTop
-      Height = 23.000000000000000000
-      Position.Y = 391.000000000000000000
-      Text = 'Observa'#231#245'es:'
-      Width = 313.000000000000000000
-    end
-    object memoObs: TMemo
-      Touch.InteractiveGestures = [igPan, igLongTap, igDoubleTap]
-      Align = alTop
-      Height = 137.000000000000000000
-      Position.Y = 414.000000000000000000
-      TabOrder = 4
-      Width = 313.000000000000000000
-      MaxLength = 400
-    end
-    object Label4: TLabel
-      Align = alTop
-      Height = 23.000000000000000000
-      Position.Y = 114.000000000000000000
-      Text = 'Descri'#231#227'o r'#225'pida :'
-      Width = 313.000000000000000000
-      Trimming = ttCharacter
-    end
-    object edtDescricaoRapida: TEdit
-      Touch.InteractiveGestures = [igLongTap, igDoubleTap]
-      Align = alTop
-      TabOrder = 6
-      Position.Y = 137.000000000000000000
-      Width = 313.000000000000000000
-      Height = 31.000000000000000000
-      KillFocusByReturn = False
     end
   end
 end
