--- a/uFrmRegister.fmx
+++ b/uFrmRegister.fmx
@@ -1,21 +1,22 @@
 object frmRegister: TfrmRegister
   Left = 0
   Top = 0
-  ClientHeight = 402
+  ClientHeight = 548
   ClientWidth = 320
+  StyleBook = dmPrincipal.StyleBookRise
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [dkDesktop, dkiPhone, dkiPad]
   DesignerMobile = True
   DesignerWidth = 320
-  DesignerHeight = 427
-  DesignerDeviceName = '2.7 QVGA Android Phone'
+  DesignerHeight = 568
+  DesignerDeviceName = 'iPhone5'
   DesignerOrientation = 0
   DesignerOSVersion = ''
   object Label1: TLabel
     Align = alTop
     Height = 23.000000000000000000
-    Position.Y = 48.000000000000000000
+    Position.Y = 44.000000000000000000
     Text = 'Login (E-Mail)'
     Width = 320.000000000000000000
   end
@@ -23,15 +24,15 @@ object frmRegister: TfrmRegister
     Touch.InteractiveGestures = [igLongTap, igDoubleTap]
     Align = alTop
     TabOrder = 3
-    Position.Y = 71.000000000000000000
+    Position.Y = 67.000000000000000000
     Width = 320.000000000000000000
-    Height = 32.000000000000000000
+    Height = 31.000000000000000000
     KillFocusByReturn = False
   end
   object Label2: TLabel
     Align = alTop
     Height = 23.000000000000000000
-    Position.Y = 158.000000000000000000
+    Position.Y = 152.000000000000000000
     Text = 'Senha'
     Width = 320.000000000000000000
   end
@@ -40,15 +41,15 @@ object frmRegister: TfrmRegister
     Align = alTop
     TabOrder = 1
     Password = True
-    Position.Y = 181.000000000000000000
+    Position.Y = 175.000000000000000000
     Width = 320.000000000000000000
-    Height = 32.000000000000000000
+    Height = 31.000000000000000000
     KillFocusByReturn = False
   end
   object Label3: TLabel
     Align = alTop
     Height = 23.000000000000000000
-    Position.Y = 213.000000000000000000
+    Position.Y = 206.000000000000000000
     Text = 'Confirmar Senha'
     Width = 320.000000000000000000
   end
@@ -57,42 +58,45 @@ object frmRegister: TfrmRegister
     Align = alTop
     TabOrder = 5
     Password = True
-    Position.Y = 236.000000000000000000
+    Position.Y = 229.000000000000000000
     Width = 320.000000000000000000
-    Height = 32.000000000000000000
+    Height = 31.000000000000000000
     KillFocusByReturn = False
   end
   object Header: TToolBar
-    Height = 48.000000000000000000
+    Height = 44.000000000000000000
     TabOrder = 0
     Width = 320.000000000000000000
     object HeaderLabel: TLabel
+      Font.Size = 18.000000000000000000
+      StyledSettings = [ssFamily, ssStyle, ssFontColor]
       Height = 48.000000000000000000
-      StyleLookup = 'toollabel'
       Text = 'Register'
       Width = 145.000000000000000000
     end
-    object btnSalvar: TButton
+    object spdCancelar: TSpeedButton
       Align = alRight
-      Height = 48.000000000000000000
-      Position.X = 247.000000000000000000
-      TabOrder = 1
-      Text = 'Salvar'
-      Width = 73.000000000000000000
+      CanFocus = True
+      Height = 44.000000000000000000
+      Position.X = 193.000000000000000000
+      StyleLookup = 'buttonstyle'
+      Text = 'Voltar'
+      Width = 63.000000000000000000
     end
-    object btnCancelar: TButton
+    object spdSalvar: TSpeedButton
       Align = alRight
-      Height = 48.000000000000000000
-      Position.X = 160.000000000000000000
-      TabOrder = 0
-      Text = 'Cancelar'
-      Width = 87.000000000000000000
+      CanFocus = True
+      Height = 44.000000000000000000
+      Position.X = 256.000000000000000000
+      StyleLookup = 'buttonstyle'
+      Text = 'Salvar'
+      Width = 64.000000000000000000
     end
   end
   object Label4: TLabel
     Align = alTop
     Height = 23.000000000000000000
-    Position.Y = 103.000000000000000000
+    Position.Y = 98.000000000000000000
     Text = 'CPF'
     Width = 320.000000000000000000
   end
@@ -100,9 +104,9 @@ object frmRegister: TfrmRegister
     Touch.InteractiveGestures = [igLongTap, igDoubleTap]
     Align = alTop
     TabOrder = 8
-    Position.Y = 126.000000000000000000
+    Position.Y = 121.000000000000000000
     Width = 320.000000000000000000
-    Height = 32.000000000000000000
+    Height = 31.000000000000000000
     KillFocusByReturn = False
   end
 end
