--- a/uFrmFormulario.fmx
+++ b/uFrmFormulario.fmx
@@ -1,19 +1,22 @@
 object frmFormulario: TfrmFormulario
   Left = 0
   Top = 0
-  ClientHeight = 508
+  ClientHeight = 548
   ClientWidth = 320
   StyleBook = dmPrincipal.StyleBookRise
-  StyleLookup = 'calloutpanelstyle'
   Visible = True
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [dkDesktop, dkiPhone, dkiPad]
+  OnCreate = FormCreate
   OnClose = FormClose
+  OnShow = FormShow
+  OnVirtualKeyboardShown = FormVirtualKeyboardShown
+  OnVirtualKeyboardHidden = FormVirtualKeyboardHidden
   DesignerMobile = True
   DesignerWidth = 320
-  DesignerHeight = 533
-  DesignerDeviceName = 'Samsung Galaxy S2'
+  DesignerHeight = 568
+  DesignerDeviceName = 'iPhone5'
   DesignerOrientation = 0
   DesignerOSVersion = ''
   object Header: TToolBar
@@ -21,181 +24,216 @@ object frmFormulario: TfrmFormulario
     TabOrder = 0
     Width = 320.000000000000000000
     object HeaderLabel: TLabel
-      StyledSettings = [ssFamily, ssSize, ssStyle]
-      Height = 48.000000000000000000
-      StyleLookup = 'toollabel'
-      Text = 'Formul'#225'rio'
-      Width = 177.000000000000000000
+      Align = alClient
+      Font.Size = 18.000000000000000000
+      Font.Style = [fsBold]
+      FontColor = xFF2A89DD
+      StyledSettings = []
+      Height = 44.000000000000000000
+      Text = 'Edi'#231#227'o'
+      TextAlign = taCenter
+      Width = 205.000000000000000000
+      WordWrap = False
     end
     object spdSalvar: TButton
       Align = alRight
+      Font.Style = [fsBold]
+      StyledSettings = [ssFamily, ssSize, ssFontColor]
       Height = 44.000000000000000000
-      Position.X = 264.000000000000000000
-      StyleLookup = 'circlebuttonstyle'
+      Position.X = 256.000000000000000000
+      StyleLookup = 'cornerbuttonstyle'
       TabOrder = 0
       Text = 'Salvar'
-      Width = 56.000000000000000000
+      Width = 64.000000000000000000
+      OnClick = spdSalvarClick
     end
     object spdVoltar: TSpeedButton
-      Align = alRight
+      Align = alLeft
       CanFocus = True
+      Font.Family = '(Default)'
+      Font.Size = 30.000000000000000000
+      Font.Style = [fsBold]
+      StyledSettings = [ssFontColor]
       Height = 44.000000000000000000
-      Margins.Right = 20.000000000000000000
-      Position.X = 177.000000000000000000
-      StyleLookup = 'circlebuttonstyle'
-      Text = 'In'#237'cio'
-      Width = 67.000000000000000000
+      Margins.Right = 10.000000000000000000
+      StyleLookup = 'cornerbuttonstyle'
+      Text = #171
+      Width = 41.000000000000000000
       OnClick = spdVoltarClick
     end
   end
-  object ReTanguloFundo: TRectangle
+  object scrollPrincipal: TVertScrollBox
     Align = alClient
-    Fill.Color = claWhitesmoke
-    Height = 464.000000000000000000
-    Width = 320.000000000000000000
-    object scrollPrincipal: TVertScrollBox
+    Height = 496.000000000000000000
+    Margins.Left = 4.000000000000000000
+    Margins.Top = 4.000000000000000000
+    Margins.Right = 3.000000000000000000
+    Margins.Bottom = 4.000000000000000000
+    TabOrder = 1
+    Width = 313.000000000000000000
+    object pnlDataHoraChegada: TPanel
       Align = alTop
-      Height = 700.000000000000000000
-      Margins.Left = 4.000000000000000000
-      Margins.Top = 4.000000000000000000
-      Margins.Right = 3.000000000000000000
-      Margins.Bottom = 4.000000000000000000
-      Position.X = 4.000000000000000000
-      Position.Y = 4.000000000000000000
-      TabOrder = 0
-      Width = 313.000000000000000000
-      object pnlDataHoraChegada: TPanel
+      Height = 57.000000000000000000
+      Position.Y = 57.000000000000000000
+      Width = 291.000000000000000000
+      TabOrder = 1
+      object Label1: TLabel
         Align = alTop
-        Height = 57.000000000000000000
-        Position.Y = 57.000000000000000000
-        Width = 313.000000000000000000
-        TabOrder = 1
-        object Label1: TLabel
-          Align = alTop
-          Height = 23.000000000000000000
-          Text = 'Chegada:'
-          Width = 313.000000000000000000
-        end
-        object HorasChegada: TTimeEdit
-          Time = 0.638888888888888800
-          Align = alLeft
-          Height = 34.000000000000000000
-          Position.X = 121.000000000000000000
-          Position.Y = 23.000000000000000000
-          TabOrder = 1
-          Width = 105.000000000000000000
-        end
-        object dtChegada: TCalendarEdit
-          Touch.InteractiveGestures = [igLongTap, igDoubleTap]
-          Align = alLeft
-          TabOrder = 2
-          Cursor = crIBeam
-          Date = 42234.000000000000000000
-          Height = 34.000000000000000000
-          Position.Y = 23.000000000000000000
-          Width = 121.000000000000000000
-        end
-      end
-      object pnlDataHoraSaida: TPanel
-        Align = alTop
-        Height = 57.000000000000000000
-        Position.Y = 114.000000000000000000
-        Width = 313.000000000000000000
-        TabOrder = 0
-        object Label2: TLabel
-          Align = alTop
-          Height = 23.000000000000000000
-          Text = 'Sa'#237'da:'
-          Width = 313.000000000000000000
-        end
-        object HorasSaida: TTimeEdit
-          Time = 0.638888888888888800
-          Align = alLeft
-          Height = 34.000000000000000000
-          Position.X = 121.000000000000000000
-          Position.Y = 23.000000000000000000
-          TabOrder = 1
-          Width = 105.000000000000000000
-        end
-        object dtSaida: TCalendarEdit
-          Touch.InteractiveGestures = [igLongTap, igDoubleTap]
-          Align = alLeft
-          TabOrder = 2
-          Cursor = crIBeam
-          Date = 42234.000000000000000000
-          Height = 34.000000000000000000
-          Position.Y = 23.000000000000000000
-          Width = 121.000000000000000000
-        end
-      end
-      object Label3: TLabel
-        Align = alTop
-        StyledSettings = [ssFamily, ssSize, ssStyle]
+        FontColor = claWhite
         Height = 23.000000000000000000
-        Margins.Top = 3.000000000000000000
-        Margins.Bottom = 3.000000000000000000
-        Position.Y = 257.000000000000000000
-        Text = 'Observa'#231#245'es:'
-        Width = 313.000000000000000000
+        Text = 'Chegada:'
+        Width = 291.000000000000000000
       end
-      object memoObs: TMemo
-        Touch.InteractiveGestures = [igPan, igLongTap, igDoubleTap]
-        Align = alTop
-        Locked = True
-        Height = 137.000000000000000000
-        Position.Y = 283.000000000000000000
-        TabOrder = 3
-        Width = 313.000000000000000000
-        MaxLength = 400
-      end
-      object pnlDescricaoRapida: TPanel
-        Align = alTop
-        Height = 31.000000000000000000
-        Margins.Top = 4.000000000000000000
-        Margins.Bottom = 4.000000000000000000
-        Position.Y = 175.000000000000000000
-        Width = 313.000000000000000000
-        TabOrder = 4
-        object edtDescricaoRapida: TEdit
-          Touch.InteractiveGestures = [igLongTap, igDoubleTap]
-          Align = alClient
-          TabOrder = 0
-          Text = 'Descri'#231#227'o R'#225'pida'
-          Width = 313.000000000000000000
-          Height = 31.000000000000000000
-          TextPrompt = 'Descri'#231#227'o r'#225'pida'
-          KillFocusByReturn = False
-          OnClick = edtDescricaoRapidaClick
-        end
-      end
-      object btnAddServico: TButton
-        Align = alTop
-        Height = 44.000000000000000000
-        Position.Y = 210.000000000000000000
-        TabOrder = 5
-        Text = 'Servi'#231'os Realizados'
-        Trimming = ttCharacter
-        Width = 313.000000000000000000
-        OnClick = btnAddServicoClick
-      end
-      object Label4: TLabel
-        Align = alTop
-        Height = 23.000000000000000000
-        Text = 'Cliente:'
-        Width = 313.000000000000000000
-        Trimming = ttCharacter
-      end
-      object cbEdtCliente: TComboEdit
-        Touch.InteractiveGestures = [igLongTap, igDoubleTap]
-        Align = alTop
-        TabOrder = 7
-        ItemHeight = 19.000000000000000000
-        ItemIndex = -1
-        Position.Y = 23.000000000000000000
-        Width = 313.000000000000000000
+      object HorasChegada: TTimeEdit
+        Time = 0.638888888888888800
+        Align = alLeft
         Height = 34.000000000000000000
-        KillFocusByReturn = False
+        Position.X = 121.000000000000000000
+        Position.Y = 23.000000000000000000
+        TabOrder = 1
+        Width = 105.000000000000000000
       end
+      object dtChegada: TCalendarEdit
+        Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+        Align = alLeft
+        TabOrder = 2
+        Cursor = crIBeam
+        Date = 42234.000000000000000000
+        Font.Size = 16.000000000000000000
+        Height = 34.000000000000000000
+        Position.Y = 23.000000000000000000
+        StyledSettings = [ssFamily, ssFontColor]
+        Width = 121.000000000000000000
+      end
+    end
+    object pnlDataHoraSaida: TPanel
+      Align = alTop
+      Height = 57.000000000000000000
+      Position.Y = 114.000000000000000000
+      Width = 291.000000000000000000
+      TabOrder = 0
+      object Label2: TLabel
+        Align = alTop
+        FontColor = claWhite
+        Height = 23.000000000000000000
+        Text = 'Sa'#237'da:'
+        Width = 291.000000000000000000
+      end
+      object HorasSaida: TTimeEdit
+        Time = 0.638888888888888800
+        Align = alLeft
+        Height = 34.000000000000000000
+        Position.X = 121.000000000000000000
+        Position.Y = 23.000000000000000000
+        TabOrder = 1
+        Width = 105.000000000000000000
+      end
+      object dtSaida: TCalendarEdit
+        Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+        Align = alLeft
+        TabOrder = 2
+        Cursor = crIBeam
+        Date = 42234.000000000000000000
+        Font.Size = 16.000000000000000000
+        Height = 34.000000000000000000
+        Position.Y = 23.000000000000000000
+        StyledSettings = [ssFamily, ssStyle, ssFontColor]
+        Width = 121.000000000000000000
+      end
+    end
+    object Label3: TLabel
+      Align = alTop
+      FontColor = claWhite
+      StyledSettings = [ssFamily, ssSize, ssStyle]
+      Height = 23.000000000000000000
+      Margins.Top = 3.000000000000000000
+      Margins.Bottom = 3.000000000000000000
+      Position.Y = 257.000000000000000000
+      Text = 'Observa'#231#245'es:'
+      Width = 291.000000000000000000
+    end
+    object memoObs: TMemo
+      Touch.InteractiveGestures = [igPan, igLongTap, igDoubleTap]
+      Align = alTop
+      Locked = True
+      Height = 137.000000000000000000
+      Position.Y = 283.000000000000000000
+      TabOrder = 3
+      Width = 291.000000000000000000
+      MaxLength = 400
+      Font.Size = 16.000000000000000000
+      StyledSettings = []
+    end
+    object pnlDescricaoRapida: TPanel
+      Align = alTop
+      Height = 31.000000000000000000
+      Margins.Top = 4.000000000000000000
+      Margins.Bottom = 4.000000000000000000
+      Position.Y = 175.000000000000000000
+      Width = 291.000000000000000000
+      TabOrder = 4
+      object edtDescricaoRapida: TEdit
+        Touch.InteractiveGestures = [igLongTap, igDoubleTap]
+        Align = alClient
+        TabOrder = 0
+        Font.Size = 16.000000000000000000
+        FontColor = claDarkgray
+        Width = 291.000000000000000000
+        Height = 31.000000000000000000
+        StyledSettings = []
+        KillFocusByReturn = True
+        OnClick = edtDescricaoRapidaClick
+        OnExit = edtDescricaoRapidaExit
+      end
+    end
+    object btnAddServico: TButton
+      Align = alTop
+      CanFocus = False
+      Default = True
+      StyledSettings = [ssFamily, ssSize, ssStyle, ssFontColor, ssOther]
+      Height = 44.000000000000000000
+      Position.Y = 210.000000000000000000
+      TabOrder = 5
+      Text = ' '#9830' Servi'#231'os Realizados'
+      Trimming = ttCharacter
+      Width = 291.000000000000000000
+      OnClick = btnAddServicoClick
+    end
+    object Label4: TLabel
+      Align = alTop
+      FontColor = claWhite
+      Height = 23.000000000000000000
+      Text = 'Cliente:'
+      Width = 291.000000000000000000
+      Trimming = ttCharacter
+    end
+    object cbCliente: TComboBox
+      Align = alTop
+      DisableFocusEffect = False
+      Height = 34.000000000000000000
+      ItemHeight = 19.000000000000000000
+      Position.Y = 23.000000000000000000
+      TabOrder = 7
+      Width = 291.000000000000000000
+      object TListBoxItem
+        Height = 19.000000000000000000
+        Text = 'Cliente 1'
+        Width = 311.000000000000000000
+      end
+      object TListBoxItem
+        Height = 19.000000000000000000
+        Position.Y = 19.000000000000000000
+        Text = 'Cliente 2'
+        Width = 311.000000000000000000
+      end
+    end
+    object pnlLateral: TPanel
+      Align = alMostRight
+      Height = 496.000000000000000000
+      Opacity = 0.000000000000000000
+      Position.X = 291.000000000000000000
+      Width = 22.000000000000000000
+      TabOrder = 8
     end
   end
 end
